# opgrok

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMMIT_MESSAGE.txt  DEPLOYMENT.md  FEATURES.md  FINAL_SUMMARY.md  GENIUS_FEATURES.md  GENIUS_MODE_GUIDE.md  HOW_TO_USE.md  INSTALLATION_OPTIONS.md  MASTER_GUIDE.md  N8N_AUTH_GUIDE.md  N8N_QUICKSTART.md  PRODUCTION_READY.md  PROJECT_SUMMARY.md  QUICK_FIX.md  README.md  REPOSITORY_STRUCTURE.md  START_HERE.md  WORKFLOW_EXAMPLES.md  docker-compose.orbstack.yml  install.sh  learn.md  manual_format.txt  opgrok  prompt.txt  puzzle_workflow.json  start_webapp.sh  test_api.py  test_xai_capabilities.py  yugioh.json
.n8n/.n8n/: config  database.sqlite-shm  database.sqlite-wal
docs/: CONSOLIDATED_DOCS.md  README.md
grok-chat-app/: .env.example  .gitignore  BUILD_COMPLETE.md  Cargo.toml  QUICKSTART.md  README.md  USAGE.md
grok-chat-app/src/: lib.rs  main.rs
grok-chat-app/src/api/: api.rs  mod.rs
grok-chat-app/src/client/: client.rs  mod.rs
grok-chat-app/src/config/: config.rs  mod.rs
grok-chat-app/src/database/: database.rs  mod.rs
grok-chat-app/src/models/: mod.rs  models.rs
grok-chat-app/src/ui/: mod.rs  ui.rs
n8n-nodes/grok-ai-assistant/: README.md  package.json
scripts/: opgrok.sh  run.sh  run_genius_mode.sh  run_n8n.sh  run_n8n_local.sh  stop_n8n_local.sh
tests/: test_n8n_integration.py
webapp/: Dockerfile  requirements.txt  run.py
webapp/app/: agentic_connector.py  audit_logger.py  genius_enhancements.py  main.py  n8n_connector.py  n8n_service.py  ultra_enhancements.py  workflow_intelligence.py  (+2 more)
(+10 files in other folders)
