[package]
name = "grok-chat-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs"] }

# HTTP client for xAI API
reqwest = { version = "0.11", features = ["json"] }

# Web framework for API server (optional)
axum = { version = "0.7", features = ["macros"], optional = true }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono"], optional = true }
futures-util = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenvy = "0.15"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Terminal UI (optional)
crossterm = { version = "0.27", optional = true }
ratatui = { version = "0.25", optional = true }

# Testing
[dev-dependencies]
tempfile = "3.0"

[features]
default = ["terminal"]
terminal = ["crossterm", "ratatui"]
server = ["axum", "sqlx", "futures-util", "tokio-stream"]
